@@ -188,11 +188,15 @@ mjb.recheck.Unknown=true
 ################################################################
 ## Filename scanner
 #
-# turn ON/OFF the language detection in the filename
+# Turn ON/OFF the language detection in the filename
 filename.scanner.language.detection=true
 
-# comma separated list of case-sensitive keywords to ignore in filenames
-filename.scanner.skip.keywords=LIMITED,DiAMOND,AXXO,PUKKA,iDHD,PROPER,REPACK,DSR,STV,UNRATED,RERIP,REMUX
+# Comma separated list of case-sensitive keywords to ignore in filenames
+filename.scanner.skip.keywords=LiMiTED,DiAMOND,AXXO,PUKKA,iDHD,PROPER,REPACK,DSR,STV,UNRATED,RERIP,REMUX
+
+# Treat filename.scanner.skip.keywords as case sensitive (true) or case insensitive (false).
+# Warning: Changing this value may remove some proper words from your video titles
+filename.scanner.skip.caseSensitive=true
 
 # comma separated list of case-insensitive key phrases to count as "movie versions"
 # the key phrases are also "dividers-insensitive": space in the phrase is the
